--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,49 @@
 [project]
 name = "piper"
 version = "0.1.0"
+description = "Diagnostics dashboard for the sandwich USD production pipeline"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+license = { text = "MIT" }
+dependencies = [
+    "duckdb>=1.1",
+    "pyarrow>=18.0",
+    "pydantic>=2.9",
+    "pydantic-settings>=2.6",
+    "structlog>=25.0",
+    "typer>=0.15",
+]
+
+[project.scripts]
+piper = "piper.cli:app"
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/piper"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3",
+    "ruff>=0.9",
+    "ty>=0.0.0a1",
+]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+addopts = "-ra -q"
+
+[tool.ruff]
+src = ["src"]
+line-length = 100
+target-version = "py313"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "UP", "B", "SIM"]
+# B008: typer relies on function-call defaults (e.g. typer.Option(...))
+ignore = ["B008"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["piper"]
