--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ packages = ["src/piper"]
 
 [dependency-groups]
 dev = [
+    "pre-commit>=4.0",
     "pytest>=8.3",
     "ruff>=0.9",
     "ty>=0.0.0a1",
