Add typed configuration system

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@
 # Copy this file to .env and adjust values for your environment.
 # All variables are optional; defaults are declared in conf/settings.toml.
 # Never commit a populated .env file.
+#
+# Nested settings use a double-underscore separator after the PIPER_ prefix:
+#   PIPER_<SECTION>__<KEY>
+# Example: PIPER_INGEST__SETTLE_SECONDS=60
 
 # Path to an alternate config file (TOML, same shape as conf/settings.toml).
 # PIPER_CONFIG_FILE=/path/to/custom_settings.toml
@@ -12,10 +16,10 @@
 # ---------------------------------------------------------------------------
 
 # Root of the shared JSONL spool written by the sandwich pipeline.
-# PIPER_PATHS_RAW_ROOT=/groups/sandwich/05_production/.telemetry/raw
+# PIPER_PATHS__RAW_ROOT=/groups/sandwich/05_production/.telemetry/raw
 
 # Parent directory for all piper-managed output (warehouse, silver, state…).
-# PIPER_PATHS_DATA_ROOT=/groups/sandwich/05_production/.telemetry
+# PIPER_PATHS__DATA_ROOT=/groups/sandwich/05_production/.telemetry
 
 # ---------------------------------------------------------------------------
 # Ingestion
@@ -23,21 +27,21 @@
 
 # Files modified more recently than this (seconds) are skipped on each pass.
 # Raise if the pipeline flushes very large files that take longer to close.
-# PIPER_INGEST_SETTLE_SECONDS=120
+# PIPER_INGEST__SETTLE_SECONDS=120
 
 # ---------------------------------------------------------------------------
 # Logging
 # ---------------------------------------------------------------------------
 
-# Log verbosity: DEBUG | INFO | WARNING | ERROR
-# PIPER_LOGGING_LEVEL=INFO
+# Log verbosity: DEBUG | INFO | WARNING | ERROR | CRITICAL
+# PIPER_LOGGING__LEVEL=INFO
 
 # Log format: "json" (structured, for aggregators) | "text" (human-readable)
-# PIPER_LOGGING_FORMAT=json
+# PIPER_LOGGING__FORMAT=json
 
 # ---------------------------------------------------------------------------
 # Privacy
 # ---------------------------------------------------------------------------
 
 # Set to "true" to hash host_user in gold models before Grafana sees it.
-# PIPER_PRIVACY_MASK_USERS=false
+# PIPER_PRIVACY__MASK_USERS=false
